--- a/ap0602.html
+++ b/ap0602.html
@@ -6,10 +6,13 @@
 		</title>
 		<style>
 			body { margin: 0; background-color: #102020;}
+			.box1 {float: left; width: 70%}
+			.box2 {float: left; width: 30%}
 		</style>
 	</head>
 	<body>
-		<div id="name" style="background-color: #406080; color: yellow" >G384002023 拓殖太郎</div>
+		<div class="box1" id="output1" style="background-color: #406080; color: yellow" >G384942023 村上瑛</div>
+		<div class="box2" id="output2"></div> 
 		<div>
 			<div id="output1">
 			</div>
